--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-yfinance==0.1.63
-pandas==1.3.3
+yfinance
+pandas
 numpy
-streamlit==0.89.0
-scikit-learn==0.24.2
-plotly==5.3.1
-keras==2.6.0
-tensorflow==2.6.0
-protobuf==3.20.0
+streamlit
+scikit-learn
+plotly
+keras
+tensorflow
+protobuf
